# picframe_4.0

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
config/: config.example.yaml  sources.example.yaml
docs/: API.md  FLEET_DASHBOARD.md  PARKING_LOT.md  PHASE_4_5_PLAN.md  PI3D_INTEGRATION.md  PI_SETUP.md  SCREEN_MAP.md  SECURITY.md  SPECIFICATION.md  TEST_PLAN.md  UPGRADE_V3_TO_V4.md
docs/test_runs/: run_2026-02-12.md
scripts/: indicator_lights.py  install.sh  install_dev_hooks.sh  party_final_sync.sh  party_lib.sh  party_preflight.sh  party_restore.sh  party_setup.sh  pre-push.hook  remove_lights_service.sh  setup_tailscale.sh  test_lights.sh  update_app.sh
scripts/setup/: ble_setup.py  install.sh  install_picframe.sh  install_setup.sh  picframe-config  setup_api.sh  state_manager.py  verify_install.sh  watchdog.py
src/: __init__.py  main.py
src/api/: __init__.py  app.py  dependencies.py  middleware.py
src/auth/: __init__.py  jwt_handler.py  models.py  pairing.py
src/config/: __init__.py  manager.py  schema.py  settings.py
src/dashboard/: __init__.py  routes.py
src/services/: __init__.py  backup_service.py  display_service.py  party_service.py  photo_tools_service.py  sleep_scheduler.py  source_manager.py  status_service.py  sync_service.py  systemd_service.py  update_service.py
systemd/: picframe-api.service  picframe-lights.service  picframe-sync.service  picframe-sync.timer
tests/: __init__.py
(+47 files in other folders)
