[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "picframe"
version = "4.0.0"
description = "Secure mobile management for Raspberry Pi picture frames"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Matt P." }
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pyjwt>=2.8.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",
    "qrcode[pil]>=7.4.2",
    "python-multipart>=0.0.6",
    "filelock>=3.13.0",
    "jinja2>=3.1.0",
    "aiofiles>=23.0.0",
    "paho-mqtt>=2.0.0",
    "httpx>=0.26.0",
    "pillow-heif>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[project.scripts]
picframe-api = "src.main:main"
picframe-cli = "src.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
